--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
   color: #5a3e2b;
   font-family: "Quicksand";
   font-weight: 500;
+
 }
 
 .app {
@@ -101,7 +102,7 @@ input {
 .list ul {
   list-style: none;
   width: 80%;
-  overflow: scroll;
+  overflow: hidden;
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
